--- a/pehan-portfolio/src/index.css
+++ b/pehan-portfolio/src/index.css
@@ -48,7 +48,7 @@
       transform: translateY(0);
     }
   }
-  @keyforms meteor {
+  @keyframes meteor {
     0% {
       transform: rotate(215deg) translateX(0);
       opacity: 1;
@@ -57,7 +57,7 @@
       opacity: 1;
     }
     100% {
-      transform: rotate(215deg) ranslatex(-500px);
+      transform: rotate(215deg) translatex(-500px);
     }
   }
 }
